# reddit-mailer

./: Cargo.toml  LICENSE  README.md  TODO.md  config.json.sample
sample_configs/: config.json  rm-sender-scheduler.timer  rm-sender.service  rm-watcher-scheduler.timer  rm-watcher.service
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  stories.rs  token.rs
