[package]
name = "reddit-mailer"
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.26"
log = "0.4"
env_logger = "0.9"
dirs = "4.0"
chrono = "0.4"

[lib]
name = "librm"
path = "src/lib.rs"

[[bin]]
name = "rm-watcher"
path = "src/bin/watcher.rs"

[[bin]]
name = "rm-sender"
path = "src/bin/sender.rs"
